[tool.poetry]
name = "cas"
version = "0.0.1"
description = "Compiling Scheme to Python bytecode"
authors = ["Liam Eckert <liameckert17@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wasmtime = "^25.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
